--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -1,6 +1,10 @@
-.user-container {
-  display: flex;
+.card {
+  width: 18rem;
+}
+.container {
+  display:flex;
   flex-direction: row;
-  gap: 10%;
+  gap: 6rem;
+  padding-top: 2rem;
   justify-content: center;
 }
