--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -3,8 +3,8 @@
 }
 .container {
   display:flex;
-  flex-direction: row;
-  gap: 6rem;
+  flex-direction: column;
+  gap: 1rem;
   padding-top: 2rem;
   justify-content: center;
 }
