--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -1,15 +1,13 @@
 .card {
-  width: 18rem;
+  width: 19rem;
 }
 .container {
-  display:flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding-top: 2rem;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 2em;
   justify-content: center;
 }
-.bio-container {
-  display:flex;
-  flex-direction:row;
-  gap:2rem;
+.card-img-top {
+  width: auto;
+  height: 300px;
 }
