--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,14 @@
   color: white;
 }
 
+.custom:hover {
+  background-color: #F4EEFF;
+}
 .App-link {
   color: #61dafb;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
