--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -7,8 +7,8 @@
   grid-template-columns: auto auto;
   grid-gap: 2em;
   justify-content: center;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 .card-img-top {
   width: auto;
