--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,12 @@
   color: #61dafb;
 }
 
+@media screen and (max-width: 375px) {
+  .nav nav-tabs {
+    display: none;
+  }
+}
+
 
 
 @keyframes App-logo-spin {
