--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -14,3 +14,16 @@
   width: auto;
   height: 300px;
 }
+
+@media screen and (max-width: 800px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+  }
+  .card {
+    justify-content: center;
+    width: 300px;
+    margin: 0 auto;
+  }
+}
